[updated] added features

--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -56,6 +56,29 @@
       <button class="button modal-toggle">Join the waitlist</button>
       <p class="subtitle">Available soon for iPhone <img src="static/logo-apple.svg" alt="apple"/></p>
     </div>
+
+
+    <section class="section imagery">
+      <h2 class="title">Take a look into what we do!</h2>
+      <img src="static/overlay-bottom.svg" class="overlay-bottom hide-mobile" alt="overlay"/>
+      <div class="zero-slider">
+        <div class="slide"><img src="static/order1.png" alt="inboxzero"/></div>
+        <div class="slide"><img src="static/order2.png" alt="inboxzero"/></div>
+        <div class="slide"><img src="static/order3.png" alt="inboxzero"/></div>
+        <div class="slide"><img src="static/order4.png" alt="inboxzero"/></div>
+        <div class="slide"><img src="static/order5.png" alt="inboxzero"/></div>
+        <div class="slide"><img src="static/order6.png" alt="inboxzero"/></div>
+      </div>
+    </section>
+    <section class="section cta">
+      <div class="cta-content">
+        <!-- <h1 class="title">Join the beta, and start loving email again.</h1>
+        <button class="button white modal-toggle">Join the waitlist</button>
+        <p class="subtitle">Available soon for Mac <img src="images/logo-apple.svg" alt="apple"/></p> -->
+      </div>
+
+
+
     <div class="screen-wrapper">
       <img src="static/mac.png" class="screen" alt="screen"/>
     </div>
@@ -76,6 +99,11 @@
         </div>
       </div>
     </section>
+
+    
+     
+    </section>
+
 
     </div>
   </div>
