[update] touched up features

--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -63,8 +63,8 @@
       <img src="static/overlay-bottom.svg" class="overlay-bottom hide-mobile" alt="overlay"/>
       <div class="zero-slider">
         <div class="slide"><img src="static/order1.png" alt="inboxzero"/></div>
-        <div class="slide"><img src="static/order2.png" alt="inboxzero"/></div>
-        <div class="slide"><img src="static/order3.png" alt="inboxzero"/></div>
+        <!-- <div class="slide"><img src="static/order2.png" alt="inboxzero"/></div> -->
+        <!-- <div class="slide"><img src="static/order3.png" alt="inboxzero"/></div> -->
         <div class="slide"><img src="static/order4.png" alt="inboxzero"/></div>
         <div class="slide"><img src="static/order5.png" alt="inboxzero"/></div>
         <div class="slide"><img src="static/order6.png" alt="inboxzero"/></div>
