--- a/application/templates/index.html
+++ b/application/templates/index.html
@@ -19,9 +19,9 @@
       <a href="templates/index.html" class="button">Back home</a>
     </div>
     <div class="form-content">
-      <a href="templates/index.html" class="logo"><img src="static/logo.svg" alt="logo"/></a>
+      <a href="templates/index.html" class="logo"></a>
       <h2 class="modal-title">Join the DiGift Waitlist</h2>
-      <p class="modal-subtitle">We're still in early stages, and we'll let you know once we're ready for more beta testers.</p>
+      <p class="modal-subtitle">We'll let you know once we're ready for more beta testers.</p>
       <form class='form' name='DiGift' method='POST'><input type='hidden' name='form-name' value='DiGift' />
         <div class="group">
           <input type="text" id="firstName" name="first-name" placeholder="&nbsp;" autocomplete="off" required>
@@ -72,9 +72,7 @@
     </section>
     <section class="section cta">
       <div class="cta-content">
-        <!-- <h1 class="title">Join the beta, and start loving email again.</h1>
-        <button class="button white modal-toggle">Join the waitlist</button>
-        <p class="subtitle">Available soon for Mac <img src="images/logo-apple.svg" alt="apple"/></p> -->
+       
       </div>
 
 
